deployments/hipster/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traffic-router
  annotations:
    kubernetes.io/ingress.global-static-ip-name: 'app-static-ip-address'
spec:
  rules:
    - host: frontend.fonn.es
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend-external
              servicePort: 80
